# nifty-options-etl

./: README.md  pyproject.toml
config/: config.yaml  logging.yaml
scripts/: run_daily.py
src/: __init__.py  backfill.py  pipeline.py
src/extract/: __init__.py  downloader.py  nse_client.py
src/load/: __init__.py  db.py  models.py  upsert.py
src/transform/: __init__.py  enrich.py  parser.py  schema.py
tests/: test_parser.py  test_schema.py
tests/fixtures/: sample_udiff.csv
